--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
         "url": "https://github.com/edwinm/game-of-life/issues"
     },
     "homepage": "https://github.com/edwinm/game-of-life#readme",
-    "dependencies": {
-    },
+    "dependencies": {},
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^7.1.3",
         "@rollup/plugin-typescript": "^4.1.1",
         "http-server": "^0.12.3",
+        "lit-element": "^2.3.1",
         "rollup": "^2.10.2",
         "rollup-plugin-livereload": "^1.3.0",
+        "rollup-plugin-terser": "^5.3.0",
         "tslib": "^2.0.0",
-        "typescript": "^3.9.2",
-        "rollup-plugin-terser": "^5.3.0"
+        "typescript": "^3.9.2"
     }
 }
